# otus-cpp-task2

./: .gitignore  .travis.yml  CMakeLists.txt  deploy.sh
src/: allocator.h  main.cpp  stack.h
timus/: 1264.cpp  1409.cpp  1787.cpp  1877.cpp  2001.cpp
